dos/M1oflController/M1ofl.h

/* External inputs (root inport signals with default storage) */
typedef struct {
  real_T Reference[42];                /* '<Root>/Reference' */
  real_T Feedback[84];                 /* '<Root>/Feedback' */
} ExtU_M1ofl_T;
/* External outputs (root outports fed by signals with default storage) */
typedef struct {
  real_T Output[2316];                 /* '<Root>/Output' */
} ExtY_M1ofl_T;
/* External inputs (root inport signals with default storage) */
extern ExtU_M1ofl_T M1ofl_U;
/* External outputs (root outports fed by signals with default storage) */
extern ExtY_M1ofl_T M1ofl_Y;
/* Model entry point functions */
extern void M1ofl_initialize(void);
extern void M1ofl_step(void);
extern void M1ofl_terminate(void);